tests/files/lexer_tests/should_fail/088.cmdr
//Should not parse due to missing while
do echo hi; (true);